@startuml
title Design Pipeline SDK — Architecture & Stage Flow
note "SDK rewrite as of: 2026-04-03
packages/design-pipeline" as N1

skinparam state {
  BackgroundColor<<stage>> #E8F4FD
  BackgroundColor<<gate>> #FFF3CD
  BackgroundColor<<terminal>> #D4EDDA
  BackgroundColor<<halt>> #F8D7DA
  BackgroundColor<<review>> #E8DAEF
  BackgroundColor<<fork>> #D5F5E3
}

skinparam component {
  BackgroundColor<<sdk>> #DDEEFF
  BackgroundColor<<port>> #FCE4EC
  BackgroundColor<<adapter>> #FFF9C4
  BackgroundColor<<agent>> #F3E5F5
}

' ═══════════════════════════════════════════════
' COMPONENT ARCHITECTURE
' ═══════════════════════════════════════════════

package "SKILL.md (thin wrapper)" as Skill {
  component "runPipeline()" as entry
}

package "TypeScript SDK
packages/design-pipeline" as SDK <<sdk>> {

  package "Engine" {
    component "Orchestrator" as orch
    component "Transitions" as trans
    component "Retry + Compensation" as retry
  }

  package "Stage Coordinators" {
    component "questioner" as sc_q
    component "debate-moderator" as sc_dm
    component "tla-writer" as sc_tla
    component "expert-review" as sc_er
    component "implementation-planning" as sc_ip
    component "pair-programming" as sc_pp
    component "fork-join" as sc_fj
  }

  package "Zod Schemas" as schemas {
    component "Stage boundary
validation" as zod
  }

  package "In-Memory State" as state {
    component "RunRecord
(instance-scoped)" as run
  }
}

package "Ports (interfaces)" as Ports <<port>> {
  interface "ClaudeAdapter" as p_claude
  interface "GitAdapter" as p_git
}

package "Adapters (implementations)" as Adapters <<adapter>> {
  component "ClaudeSdkAdapter" as a_claude
  component "ChildProcessGitAdapter" as a_git
}

package "Agent Prompts
src/prompts/" as Prompts <<agent>> {
  component "questioner" as ap_q
  component "debate-moderator" as ap_dm
  component "tla-writer" as ap_tla
  component "expert-review" as ap_er
  component "implementation-planning" as ap_ip
  component "pair-programming" as ap_pp
  component "fork-join" as ap_fj
}

' ─── Wiring ───

entry --> orch : calls

orch --> trans : state transitions
orch --> retry : retries + compensation
orch --> zod : validates every
stage boundary

orch --> sc_q
orch --> sc_dm
orch --> sc_tla
orch --> sc_er
orch --> sc_ip
orch --> sc_pp
orch --> sc_fj

sc_q ..> p_claude : streamPrompt
sc_dm ..> p_claude : executePrompt
sc_tla ..> p_claude : executePrompt
sc_er ..> p_claude : executePrompt
sc_ip ..> p_claude : streamPrompt
sc_pp ..> p_claude : routePairMessage
sc_pp ..> p_git : branch, commit, push
sc_fj ..> p_git : commit
sc_fj ..> p_claude : executePrompt

p_claude <|.. a_claude : implements
p_git <|.. a_git : implements

sc_q --> ap_q : template literal
prompt
sc_dm --> ap_dm : template literal
prompt
sc_tla --> ap_tla : template literal
prompt
sc_er --> ap_er : template literal
prompt
sc_ip --> ap_ip : template literal
prompt
sc_pp --> ap_pp : template literal
prompt
sc_fj --> ap_fj : template literal
prompt

orch --> run : reads/writes
in-memory state

' ═══════════════════════════════════════════════
' 7-STAGE PIPELINE FLOW
' ═══════════════════════════════════════════════

[*] --> STAGE_1_QUESTIONER

state "Stage 1: Questioner" as STAGE_1_QUESTIONER <<stage>> {
  state "Streaming user interview
(SDK streams input)" as S1
}

state "Stage 2: Design Debate" as STAGE_2_DESIGN_DEBATE <<stage>> {
  state "SDK dispatches experts
via debate-moderator coordinator" as S2
}

state "Stage 3: TLA+ Writer" as STAGE_3_TLA_WRITER <<stage>> {
  state "SDK calls tla-writer agent
Zod validates TlaResult" as S3
}

state "Stage 4: Expert Review" as STAGE_4_EXPERT_REVIEW <<stage>> {
  state "SDK calls expert-review agent
Zod validates TlaReviewSynthesis" as S4
}

state "Stage 5: Implementation Planning" as STAGE_5_IMPLEMENTATION <<stage>> {
  state "SDK calls implementation-planning
Streaming confirmation gate
Zod validates ImplementationPlan" as S5
}

STAGE_1_QUESTIONER --> STAGE_2_DESIGN_DEBATE : BriefingResult
(Zod validated)
STAGE_1_QUESTIONER --> HALTED : user abandons

STAGE_2_DESIGN_DEBATE --> STAGE_3_TLA_WRITER : DebateSynthesis
(Zod validated)
STAGE_2_DESIGN_DEBATE --> HALTED : stalemate

STAGE_3_TLA_WRITER --> STAGE_4_EXPERT_REVIEW : TlaResult
(Zod validated)
STAGE_3_TLA_WRITER --> STAGE_3_TLA_WRITER : retry (compensation)

STAGE_4_EXPERT_REVIEW --> STAGE_5_IMPLEMENTATION : TlaReviewSynthesis
(Zod validated)
STAGE_4_EXPERT_REVIEW --> STAGE_3_TLA_WRITER : back to tla-writer

STAGE_5_IMPLEMENTATION --> STAGE_6 : ImplementationPlan
(Zod validated)

' ─── Stage 6: Pair Programming ───

state "Stage 6: Pair Programming" as STAGE_6 {

  state "Confirmation Gate" as STAGE_6_CONFIRMATION_GATE <<gate>> {
    state "User reviews plan via
streaming input" as S6gate
  }

  state "Tier Executing" as STAGE_6_TIER_EXECUTING <<stage>> {
    state "SDK routes messages
synchronously per pair" as S6exec
  }

  state "Tier Merging" as STAGE_6_TIER_MERGING <<stage>> {
    state "GitAdapter: branch, merge, commit" as S6merge
  }

  state "Reviewing" as STAGE_6_REVIEWING <<review>> {
    state "SDK dispatches 9 reviewer
agents in parallel" as S6review
  }

  state "Review Passed" as STAGE_6_REVIEW_PASSED <<review>>
  state "Review Failed" as STAGE_6_REVIEW_FAILED <<review>>

  state "Revising" as STAGE_6_REVISING <<review>> {
    state "Pair revises via
routePairMessage" as S6revise
  }

  state "Inter-Tier Verification" as STAGE_6_INTER_TIER_VERIFICATION <<stage>> {
    state "Full test + tsc + lint" as S6verify
  }

  state "Global Review
(Double-Pass)" as STAGE_6_GLOBAL_REVIEW <<gate>> {
    state "test -> fix -> lint -> fix -> tsc -> fix
2 consecutive clean passes required
per-step retry cap: 1
MaxGlobalFixes: 3" as S6global
  }

  state "Fix Session" as STAGE_6_FIX_SESSION <<stage>> {
    state "Targeted fix by agent pair" as S6fix
  }

  ' Confirmation gate
  STAGE_6_CONFIRMATION_GATE --> STAGE_6_TIER_EXECUTING : UserConfirms

  ' Tier execution -> merging
  STAGE_6_TIER_EXECUTING --> STAGE_6_TIER_MERGING : all sessions done
(BeginTierMerging)

  ' Merging -> reviewer gate
  STAGE_6_TIER_MERGING --> STAGE_6_REVIEWING : all merges done
(BeginReviewing)

  ' Reviewer gate
  STAGE_6_REVIEWING --> STAGE_6_REVIEW_PASSED : quorum passed
(ceil(2n/3) reviewers)
  STAGE_6_REVIEWING --> STAGE_6_REVIEW_FAILED : reviewer failed

  ' Review outcomes
  STAGE_6_REVIEW_PASSED --> STAGE_6_INTER_TIER_VERIFICATION : ReviewGateCleared
  STAGE_6_REVIEW_FAILED --> STAGE_6_REVISING : BeginRevision

  ' Revision loop
  STAGE_6_REVISING --> STAGE_6_REVIEWING : ResubmitForReview

  ' Inter-tier verification
  STAGE_6_INTER_TIER_VERIFICATION --> STAGE_6_TIER_EXECUTING : passes,
more tiers remain
  STAGE_6_INTER_TIER_VERIFICATION --> STAGE_6_GLOBAL_REVIEW : passes,
last tier

  ' Global review double-pass
  STAGE_6_GLOBAL_REVIEW --> STAGE_6_FIX_SESSION : fails, under cap
(GlobalReviewFails)

  ' Fix session loop
  STAGE_6_FIX_SESSION --> STAGE_6_GLOBAL_REVIEW : FixSessionComplete
}

' ─── Stage 7: Fork-Join ───

state "Stage 7: Fork-Join" as STAGE_7 <<fork>> {
  state "PlantUML Update" as STAGE_7_PLANTUML
  state "Librarian Index" as STAGE_7_LIBRARIAN

  [*] --> STAGE_7_PLANTUML
  [*] --> STAGE_7_LIBRARIAN
  STAGE_7_PLANTUML --> [*]
  STAGE_7_LIBRARIAN --> [*]

  note right of STAGE_7_PLANTUML
    Only if changeFlag = TRUE
    Non-fatal on failure
  end note

  note right of STAGE_7_LIBRARIAN
    Updates docs/librarian/
    Non-fatal on failure
  end note
}

' ─── Terminal States ───

state "COMPLETE" as COMPLETE <<terminal>>
state "HALTED" as HALTED <<halt>>

' ─── Stage 6 exits ───

STAGE_6_CONFIRMATION_GATE --> HALTED : user rejects plan
STAGE_6_TIER_EXECUTING --> HALTED : TierAllFailed
STAGE_6_TIER_MERGING --> HALTED : MergeConflictEscalates
STAGE_6_INTER_TIER_VERIFICATION --> HALTED : VerificationFails
STAGE_6_GLOBAL_REVIEW --> STAGE_7 : GlobalReviewPasses
(2 clean passes)
STAGE_6_GLOBAL_REVIEW --> HALTED : GlobalReviewExhausted
(fixCount >= 3)
STAGE_6_REVISING --> HALTED : ReviewRevisionsExhausted
(MaxReviewRevisions reached)

' ─── Stage 7 -> Terminal ───

STAGE_7 --> COMPLETE : atomic commit
(via GitAdapter)

COMPLETE --> [*]
HALTED --> [*]

' ─── Legend ───

legend right
  |= Color |= Meaning |
  | <#E8F4FD> | Pipeline stage |
  | <#FFF3CD> | User gate / decision |
  | <#E8DAEF> | Review gate |
  | <#D5F5E3> | Fork-join parallel |
  | <#D4EDDA> | Complete (terminal) |
  | <#F8D7DA> | Halted (terminal) |
  ---
  **SDK Architecture:**
  SKILL.md -> runPipeline() -> Orchestrator
  Orchestrator -> Stage Coordinators -> Agent Prompts
  Stage Coordinators use Ports (ClaudeAdapter, GitAdapter)
  Adapters implement Ports (ClaudeSdkAdapter, ChildProcessGitAdapter)
  Zod validates all stage boundary outputs
  RunRecord: in-memory, instance-scoped (no file I/O)
  ---
  **Agents (domain-instruction-only prompts):**
  Stage 1: questioner (streaming input)
  Stage 2: debate-moderator + expert roster
  Stage 3: tla-writer
  Stage 4: expert-review
  Stage 5: implementation-planning (streaming confirmation)
  Stage 6: pair-programming (synchronous message routing)
    -> project-manager (selection only)
    -> trainer/ts/hono/ui-writer + vitest/playwright-writer
    -> 9 reviewers (artifact, compliance, bug,
       simplicity, type-design, security,
       backlog, test, a11y)
  Stage 7: fork-join (librarian + PlantUML)
  ---
  **Key Constants:**
  maxRetries: 3
  maxStreamTurns: 20
  retryBaseDelayMs: 1000
  MaxGlobalFixes: 3 (double-pass restart cap)
  MaxReviewRevisions: 3
  MinReviewQuorum: ceil(2n/3)
endlegend
@enduml